added cat logo and updated CSS sheet

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         
       </section>
     </aside>
+    <div class="container">
+      <img src="lesson04-mock5-cat-logo.png" alt="company logo"/>
+      <p class="div.text">
+        Aborpos nisto inci tet aut que volupti beruptiberro to ex
+        esseque invenienihil imaximu scideru ptistiusam consequun</p>
+        <nav>
+          <a herf="#">Footer link 1 /</a>
+          <a herf="#">Footer link 2 /</a>
+          <a herf="#">Footer link 3 /</a>
+          <a herf="#">Footer link 4 /</a>
+        </nav>
+        <footer class="copyright">© 2018 Kitties To Go!, LLC | Seattle, WA
+          
+        </footer>
+   
+  </div>
   
   </body>
 </html>
